1.0-devel
=====================

 * Remove path of filename from ATFile's title when upload a file using MS IE.
   [panjunyong]

 * Merged uiteam-plip73-sanitize-short-names from the old plone
   svn repos: diff https://svn.plone.org/svn/plone/ATContentTypes/branches/1.0@6168
   https://svn.plone.org/svn/plone/ATContentTypes/branches/uiteam-plip73-sanitize-short-names
   [tiran]

 * Added flag to determine whether an content object has undergone a successful
   initial edit.  Use this flag along with detection of default naming to
   rename object on inital edit.
   [alecm]

 * Merged the topic tool branch into 1.0 XXX: insert history here 
   [tiran]

 * Refactored ConstrainTypesMixin to support PLIP 78
    o DISABLED means use standard allowed types from portal_types
    o ENABLED means use restrictions set
    o ACQUIRE means use types from parent if parent is of same portal type,
      else same as ENABLED (doesn't make sense to inherit from any content type)
    o immediatelyAddableTypes field - for subset of allowed types to show in
      the "add" menu
    o turned off and removed disable constrain-types flag

 * Turn on TemplateMixin for everything - now directly supported in Plone
   via "display" menu

 * Merged plip #3 branch: auto ordering / sorting into the 1.0 branch.
   Features / Changes:
    * Added getObjPositioninParent and getObjSize as helper methods for
      the catalog based folder listing to all types
    * Added AutoSortSuppot and AutoOrderSupport to ATCT. AutoSortSupport is
      used for the catalog based folder listing and AutoOrderSupport also
      adds some auto ordering based on OrderedFolder
    * Subclass ATFolder from AutoOrderSupport+AutoSortSupport, ATBTreeFolder
      only from AutoSortSupport
   [tiran]

 * ATEvent: Removed end date and start date from searchable text.
   [tiran]

 * Implemented PLIP #2 of ATCT: using ZConfig to configure the types and
   features of ATContentTypes.
   [tiran]
   