@@ -21,10 +21,7 @@
 
 DO NOT CHANGE THIS FILE!
 
-All changes will be overwritten by the next release. Use a customconfig instead.
-See customconfig.py.example
-
-
+Use ZConfig to configure ATCT
 """
 __docformat__ = 'restructuredtext'
 
@@ -36,21 +33,6 @@ from Products.ATContentTypes.configuration import zconf
 ## read http://www.egenix.com/files/python/mxTidy.html for more informations
 MX_TIDY_ENABLED = zconf.mxtidy.enable
 MX_TIDY_OPTIONS= zconf.mxtidy.options
-
-## enable external storage variant of ATFile and ATImage
-## requires ExternalStorage (not working yet)
-EXT_STORAGE_ENABLE = zconf.externaltypes.enable
-
-
-# XXX: These are not currently used: they are enabled always
-
-## use TemplateMixin?
-## if enabled users can choose between different view templates for each object
-# ENABLE_TEMPLATE_MIXIN = zconf.templatemixin.enable
-
-## use ConstrainedMixin?
-## if enabled you can constrain allowed types on an ATCT Folder
-# ENABLE_CONSTRAIN_TYPES_MIXIN = zconf.constraintypes.enable
 
 ###############################################################################
 ## private options
@@ -266,18 +248,11 @@ MIME_ALIAS = {
 ## force enable some features for ATCT unit testing
 if os.environ.get('ZOPETESTCASE', False):
     _ATCT_OLD_VALUES = {
-        # XXX: Disabled, as it currently does nothing
-        # 'ENABLE_TEMPLATE_MIXIN' : ENABLE_TEMPLATE_MIXIN,
-        'EXT_STORAGE_ENABLE' : EXT_STORAGE_ENABLE,
         'INSTALL_LINGUA_PLONE' : INSTALL_LINGUA_PLONE,
         }
-    # XXX: Disabled, as it currently does nothing
-    # ENABLE_CONSTRAIN_TYPES_MIXIN = True
-    EXT_STORAGE_ENABLE = True
     INSTALL_LINGUA_PLONE = True
     _ATCT_UNIT_TEST_MODE = True
     
 else:
     _ATCT_UNIT_TEST_MODE = False
     _ATCT_OLD_VALUES = {}
-
